--- a/app/src/main/res/layout/activity_base_movie.xml
+++ b/app/src/main/res/layout/activity_base_movie.xml
@@ -32,8 +32,21 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/progress"
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             app:setAdapter="@{viewModel.observableMovieAdapter}"
+            app:setOnScroll="@{() -> viewModel.onLoadMore()}"
+            />
+
+        <ProgressBar
+            android:id="@+id/progress"
+            android:layout_width="@dimen/dp_0"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+            android:background="@android:color/white"
             />
 
         <TextView
