--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dp_10">10dp</dimen>
+    <dimen name="sp_12">12sp</dimen>
     <dimen name="dp_120">120dp</dimen>
+    <dimen name="sp_14">14sp</dimen>
+    <dimen name="dp_140">140dp</dimen>
     <dimen name="dp_150">150dp</dimen>
-    <dimen name="dp_5">5dp</dimen>
     <dimen name="sp_20">20sp</dimen>
+    <dimen name="dp_200">200dp</dimen>
+    <dimen name="dp_25">25dp</dimen>
+    <dimen name="dp_5">5dp</dimen>
 </resources>
