handle click item video -> play trailer

--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="@dimen/dp_5"
+        android:onClick="@{() -> viewModel.onClickVideo()}"
         >
 
         <ImageView
