--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="dp_1">1dp</dimen>
     <dimen name="dp_10">10dp</dimen>
     <dimen name="dp_100">100dp</dimen>
     <dimen name="sp_12">12sp</dimen>
     <dimen name="dp_120">120dp</dimen>
     <dimen name="sp_14">14sp</dimen>
+    <dimen name="dp_15">15dp</dimen>
     <dimen name="sp_16">16sp</dimen>
     <dimen name="dp_130">130dp</dimen>
     <dimen name="dp_140">140dp</dimen>
     <dimen name="dp_150">150dp</dimen>
+    <dimen name="dp_2">2dp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="dp_20">20dp</dimen>
     <dimen name="dp_200">200dp</dimen>
