--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -1,43 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewModel"
             type="com.framgia.nvmanh.boxmovie.screen.base.ItemMovieViewModel"/>
     </data>
-
-    <android.support.v7.widget.CardView android:layout_width="match_parent"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        android:background="@color/color_tundora"
+        >
 
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/image_movie"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_100"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:imageUrl="@{viewModel.observableMovie.poster}"
+            android:scaleType="centerCrop"
+            />
 
-            <ImageView
-                android:id="@+id/image_movie"
-                android:layout_width="@dimen/dp_120"
-                android:layout_height="@dimen/dp_150"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:imageUrl="@{viewModel.observableMovie.poster}"
-                android:scaleType="centerCrop"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toRightOf="@+id/image_movie"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_margin="@dimen/dp_5"
-                android:text="@{viewModel.observableMovie.title}"
-                android:textStyle="bold"
-                android:textColor="@android:color/black"
-                android:textSize="@dimen/sp_20"
-                />
-
-        </android.support.constraint.ConstraintLayout>
-
-    </android.support.v7.widget.CardView>
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/dp_5"
+            android:layout_marginLeft="@dimen/dp_10"
+            android:text="@{viewModel.observableMovie.title}"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/sp_16"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/image_movie"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
