--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,9 +14,12 @@
     <dimen name="dp_2">2dp</dimen>
     <dimen name="sp_20">20sp</dimen>
     <dimen name="dp_20">20dp</dimen>
+    <dimen name="dp_24">24dp</dimen>
     <dimen name="dp_200">200dp</dimen>
     <dimen name="dp_25">25dp</dimen>
     <dimen name="dp_30">30dp</dimen>
+    <dimen name="dp_4">4dp</dimen>
     <dimen name="dp_5">5dp</dimen>
     <dimen name="dp_90">90dp</dimen>
+    <dimen name="dp_80">80dp</dimen>
 </resources>
