handle add/removie movie to favourite

--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -9,7 +9,7 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="@color/color_cod_gray">
 
         <android.support.v7.widget.RecyclerView
             android:layout_width="0dp"
@@ -18,6 +18,9 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            app:setAdapter="@{viewModel.observableMovieAdapter}"
+            app:addLinearDecoration="@{viewModel.observableItemDecoration}"
             />
 
     </android.support.constraint.ConstraintLayout>
