--- a/app/src/main/res/layout/activity_base_movie.xml
+++ b/app/src/main/res/layout/activity_base_movie.xml
@@ -10,7 +10,9 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/color_cod_gray"
+        >
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,13 +23,23 @@
             app:layout_constraintRight_toRightOf="parent"
             app:title="@{viewModel.observableGenres.get()}"
             app:titleTextColor="@android:color/white"
-            android:background="@color/color_ochre"
+            android:background="@color/color_tundora"
+            />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:background="@color/color_gray"
             />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_movie"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/dp_1"
             app:layout_constraintTop_toBottomOf="@id/toolbar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -36,31 +48,34 @@
             app:layoutManager="android.support.v7.widget.LinearLayoutManager"
             app:setAdapter="@{viewModel.observableMovieAdapter}"
             app:setOnScroll="@{() -> viewModel.onLoadMore()}"
+            app:addLinearDecoration="@{viewModel.observableItemDecoration}"
+            android:visibility="@{viewModel.isError ? View.GONE : View.VISIBLE}"
             />
 
         <ProgressBar
             android:id="@+id/progress"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
-            android:background="@android:color/white"
             />
 
-        <TextView
-            android:layout_width="0dp"
+        <Button
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
             android:padding="@dimen/dp_5"
-            android:text="@string/error_connect"
+            android:text="@string/action_retry"
             android:gravity="center"
             android:textColor="@android:color/white"
             android:background="@android:color/holo_red_light"
             android:visibility="@{viewModel.isError ? View.VISIBLE : View.GONE}"
+            android:onClick="@{() -> viewModel.retry()}"
             />
     </android.support.constraint.ConstraintLayout>
 </layout>
