--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -14,6 +15,7 @@
         android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="0dp"
             android:layout_height="?attr/actionBarSize"
             app:layout_constraintTop_toTopOf="parent"
@@ -24,10 +26,23 @@
             app:title="@{viewModel.observableMovieDetail.title}"
             />
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="@dimen/dp_1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:background="@color/color_gray"
+            />
+
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="?attr/actionBarSize"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginTop="@dimen/dp_1"
             android:background="@color/color_cod_gray">
 
             <android.support.constraint.ConstraintLayout
@@ -67,14 +82,25 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/dp_10"
-                    android:text="@{viewModel.observableMovieDetail.title}"
                     android:maxLines="2"
+                    android:text="@{viewModel.observableMovieDetail.title}"
                     android:textColor="@android:color/holo_red_light"
                     android:textSize="@dimen/sp_16"
                     android:textStyle="bold"
-                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/image_favorite"
                     app:layout_constraintStart_toEndOf="@+id/image_poster"
                     app:layout_constraintTop_toBottomOf="@+id/image_backdrop" />
+
+                <ImageView
+                    android:id="@+id/image_favorite"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="@dimen/dp_10"
+                    android:src="@{viewModel.isFavorite ? @drawable/ic_turned_in_red_24dp : @drawable/ic_turned_in_not_red_24dp}"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/image_backdrop"
+                    android:onClick="@{() -> viewModel.onClickFavourite()}"
+                    />
 
                 <TextView
                     android:id="@+id/text_title_release_date"
@@ -263,15 +289,17 @@
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:text="@string/title_view_more"
+                    android:text="@{viewModel.isErrorReview ? @string/action_retry : @string/title_view_more}"
+                    android:textColor="@android:color/white"
+                    android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_marginRight="@dimen/dp_10"
-                    android:background="@android:color/holo_blue_dark"
+                    android:background="@{viewModel.isErrorReview ? @android:color/holo_red_light : @android:color/holo_blue_dark}"
                     app:layout_constraintTop_toBottomOf="@+id/recycler_review"
                     android:onClick="@{() -> viewModel.loadMoreReview()}"
-                    android:visibility="@{(viewModel.isLastReview || viewModel.isLoading)? View.GONE : View.VISIBLE}"
+                    android:visibility="@{(viewModel.isLastReview || viewModel.isLoadingReview)? View.GONE : View.VISIBLE}"
                     />
 
                 <ProgressBar
@@ -282,9 +310,47 @@
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_marginRight="@dimen/dp_10"
                     app:layout_constraintTop_toBottomOf="@+id/recycler_review"
-                    android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+                    android:visibility="@{viewModel.isLoadingReview ? View.VISIBLE : View.GONE}"
                     />
             </android.support.constraint.ConstraintLayout>
         </ScrollView>
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:background="@color/color_cod_gray"
+            android:visibility="@{viewModel.isLoading || viewModel.isError ? View.VISIBLE : View.GONE}"
+            />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            android:padding="@dimen/dp_5"
+            android:text="@string/action_retry"
+            android:gravity="center"
+            android:textColor="@android:color/white"
+            android:background="@android:color/holo_red_light"
+            android:visibility="@{viewModel.isError ? View.VISIBLE : View.GONE}"
+            android:onClick="@{() -> viewModel.retry()}"
+            />
+
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+            />
+
     </android.support.constraint.ConstraintLayout>
 </layout>
