--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,8 @@
     <color name="color_primary_dark">#303F9F</color>
     <color name="color_accent">#FF4081</color>
     <color name="color_ochre">#FF5722</color>
-    <color name="color_mine_shaft">#77000000</color>
-    <color name="color_gray">#535353</color>
+    <color name="color_mine_shaft">#282828</color>
+    <color name="color_gray">#282828</color>
     <color name="color_cod_gray">#1A1A1A</color>
     <color name="color_tundora">#222222</color>
 </resources>
