--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="color_ochre">#FF5722</color>
     <color name="color_mine_shaft">#282828</color>
     <color name="color_gray">#282828</color>
+    <color name="color_gray_light">#bcbcbc</color>
     <color name="color_cod_gray">#1A1A1A</color>
     <color name="color_tundora">#222222</color>
 </resources>
