--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -19,6 +19,7 @@
             android:layout_height="?attr/actionBarSize"
             android:padding="@dimen/dp_15"
             android:src="@drawable/ic_arrow_back_white_24dp"
+            android:onClick="@{() -> viewModel.onClickBack()}"
             />
 
         <EditText
