--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="color_primary_dark">#303F9F</color>
     <color name="color_accent">#FF4081</color>
     <color name="color_ochre">#FF5722</color>
-    <color name="color_mine_shaft">#282828</color>
+    <color name="color_mine_shaft">#a2282828</color>
     <color name="color_gray">#282828</color>
     <color name="color_gray_light">#bcbcbc</color>
     <color name="color_cod_gray">#1A1A1A</color>
