--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="color_primary">#3F51B5</color>
     <color name="color_primary_dark">#303F9F</color>
-    <color name="color_accent">#FF4081</color>
+    <color name="color_accent">#ffffff</color>
     <color name="color_ochre">#FF5722</color>
     <color name="color_mine_shaft">#a2282828</color>
     <color name="color_gray">#282828</color>
