update UI main screen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -64,7 +64,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/view_pager"
                 android:text="@string/title_popular"
-                android:background="@drawable/action"
+                android:background="@drawable/comedy"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="@dimen/sp_20"
@@ -80,12 +80,11 @@
                 android:layout_marginRight="@dimen/dp_10"
                 android:layout_marginStart="@dimen/dp_5"
                 android:layout_marginTop="@dimen/dp_10"
-                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guide_line"
                 app:layout_constraintTop_toBottomOf="@+id/view_pager"
                 android:text="@string/title_toprated"
-                android:background="@drawable/action"
+                android:background="@drawable/western"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="@dimen/sp_20"
@@ -108,12 +107,11 @@
                 android:layout_marginRight="@dimen/dp_10"
                 android:layout_marginStart="@dimen/dp_10"
                 android:layout_marginTop="@dimen/dp_10"
-                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button_popular"
                 android:text="@string/title_now_playing"
-                android:background="@drawable/action"
+                android:background="@drawable/animetion"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="@dimen/sp_20"
@@ -130,12 +128,11 @@
                 android:layout_marginStart="@dimen/dp_10"
                 android:layout_marginTop="@dimen/dp_10"
                 android:layout_marginBottom="@dimen/dp_10"
-                android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button_now_playing"
-                android:text="@string/title_coming"
-                android:background="@drawable/action"
+                android:text="@string/title_upcoming"
+                android:background="@drawable/fantasy"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
                 android:textSize="@dimen/sp_20"
