--- a/app/src/main/res/layout/activity_detail_movie.xml
+++ b/app/src/main/res/layout/activity_detail_movie.xml
@@ -36,6 +36,7 @@
             />
 
         <ScrollView
+            android:id="@+id/scroll_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -47,7 +48,9 @@
 
             <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:paddingBottom="@dimen/dp_20"
+                >
 
                 <ImageView
                     android:id="@+id/image_backdrop"
@@ -251,6 +254,32 @@
                     />
 
                 <TextView
+                    android:id="@+id/text_title_recommand"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="@string/title_recommandations"
+                    style="@style/StyleTitle"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/recycler_trailer" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_recommand"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:background="@color/color_tundora"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:padding="@dimen/dp_10"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/text_title_recommand"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    android:orientation="horizontal"
+                    app:setAdapter="@{viewModel.observableRecommandAdapter}"
+                    />
+
+                <TextView
                     android:id="@+id/text_title_casts"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
@@ -268,7 +297,7 @@
                     style="@style/StyleTitle"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/recycler_trailer" />
+                    app:layout_constraintTop_toBottomOf="@+id/recycler_recommand" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recycler_review"
