--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/color_cod_gray"
+            android:paddingBottom="@dimen/dp_10"
             >
 
             <android.support.v4.view.ViewPager
