--- a/app/src/main/res/layout/item_trending_movie.xml
+++ b/app/src/main/res/layout/item_trending_movie.xml
@@ -9,14 +9,15 @@
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10">
 
         <ImageView
             android:id="@+id/image_backdrop"
             android:layout_width="0dp"
             android:layout_height="@dimen/dp_200"
             android:scaleType="centerCrop"
-            app:imageUrl="@{viewModel.observableMovie.poster}"
+            app:imageUrl="@{viewModel.observableMovie.backdrop}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
